--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=BibliotecaMVC
+
+spring.datasource.url = jdbc:h2:mem:bibliotecah2
+spring.datasource.username= sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/bibliotecah2
